--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Tính Nhiệt Độ Sườn Khuất Gió</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Times New Roman, sans-serif;
       background: #f1f5f9;
       display: flex;
       flex-direction: column;
